# satisfactory-signal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yml  frm_client.py  grafana_client.py  main.py  pyproject.toml  server_api_client.py  signal_client.py  text_processing.py
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
charts/satisfactory-signal/: Chart.yaml  values.yaml
charts/satisfactory-signal/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  signal-cli-deployment.yaml  signal-cli-pvc.yaml  signal-cli-service.yaml
tests/: conftest.py  test_bridge.py  test_command_handler.py  test_config.py  test_frm_client.py  test_grafana_client.py  test_server_api_client.py  test_signal_client.py  test_text_processing.py
