[project]
name = "satisfactory-signal-bridge"
version = "0.1.2"
description = "Bridge between Signal Messenger and Satisfactory game chat via FRM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pysignalclirestapi>=0.3.23",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "emoji>=2.0.0",
]

[project.scripts]
satisfactory-signal-bridge = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
