[project]
name = "satisfactory-signal-bridge"
version = "0.1.2"
description = "Bridge between Signal Messenger and Satisfactory game chat via FRM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pysignalclirestapi>=0.3.23",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "emoji>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
satisfactory-signal-bridge = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
